# bookstore

./: BookStore.cpp  BookStore.h  CMakeLists.txt  README.md
.github/workflows/: ci.yml
db/: bookstore.db
include/: Book.h  BookStore.h  BookStoreUI.h
src/: Book.cpp  BookStore.cpp  BookStoreUI.cpp  main.cpp
tests/: tests.cpp
